# brain

./: .clangd  .gitignore  CMakeLists.txt  imgui.ini  main.c
.cache/clangd/index/: SDL.c.74A9A20A65A0EFED.idx  SDL.h.6EDEF9604693E308.idx  SDL_RLEaccel.c.35E8B2CE64D58B80.idx  SDL_RLEaccel_c.h.1483171D52CBE667.idx  SDL_alsa_audio.c.0C7CCFA1009B729E.idx  SDL_alsa_audio.h.7564E5F302F91E17.idx  SDL_appid.c.F9A55D58E0279B9B.idx  SDL_appid.h.F025FACA272745E8.idx  SDL_assert.c.AA70CF68F85FCCEA.idx  SDL_assert.h.46FA86833B2BE765.idx  SDL_assert_c.h.895C0673D68341FD.idx  SDL_asyncio.c.25FAB0563FB791A0.idx  SDL_asyncio.h.F6BED5D8AC6D96AE.idx  SDL_asyncio_c.h.5C85C45407B49E0D.idx  SDL_asyncio_generic.c.BBB5C44A95ECA8FD.idx  SDL_atomic.c.223D78E1FF992357.idx  SDL_atomic.h.CD7AA1EECB592ACB.idx  SDL_audio.c.A1FDDDC0EAD40701.idx  SDL_audio.h.47705BA2310C5AA1.idx  SDL_audio_c.h.15FB0B8FA0AE289E.idx  SDL_audio_channel_converters.h.5E77CB853FAC2ACD.idx  SDL_audiocvt.c.8B47939231FBD1F9.idx  SDL_audiodev.c.2467447ABB52E20B.idx  SDL_audioqueue.c.31EBD0AE262FCBF4.idx  SDL_audioqueue.h.15411FEE9A03CE7C.idx  SDL_audioresample.c.58E94068F52BD257.idx  SDL_audioresample.h.074FAE16764515E8.idx  SDL_audiotypecvt.c.2EA3BCB23E17859F.idx  SDL_begin_code.h.72AC660B18902818.idx  SDL_bits.h.F4ACA2B1BB821786.idx  SDL_blendfillrect.c.46665151B0785BC8.idx  SDL_blendfillrect.h.87F6FCD587F7B3DF.idx  SDL_blendline.c.E2171823C743FE3C.idx  SDL_blendline.h.809FBABF8AAA6ECD.idx  SDL_blendmode.h.CB06C9124E5C7A5A.idx  SDL_blendpoint.c.4EF7DD9B748EAF13.idx  SDL_blendpoint.h.A34C7391D20B49DD.idx  SDL_blit.c.3EFA5F6177C32A50.idx  SDL_blit.h.E852187DBAF6CCE9.idx  SDL_blit_0.c.F6B8EA490C5C605F.idx  (+695 more)
amygdala/: CMakeLists.txt
basal_ganglia/: CMakeLists.txt
brainstem/: CMakeLists.txt  brainstem.c  brainstem.h
cerebellum/: CMakeLists.txt
cortex/: CMakeLists.txt
cortex/vision/: visual_cortex.c  visual_cortex.h
docs/: README.md
hippocampus/: CMakeLists.txt
hypothalamus/: CMakeLists.txt
interfaces/: CMakeLists.txt
interfaces/bus/: broker.c  broker.h  envelope.h  event.h  rb.c  rb.h
interfaces/io/: vision_payloads.h
output/: CMakeLists.txt  imgui_sdl3.cpp  my_imgui.h
periphery/: CMakeLists.txt
periphery/vision/: camera.h  camera_gray8.c  camera_v4l2.c
spinal_cord/: CMakeLists.txt
tests/: test_common.c  test_common.h  test_rb.c  test_rules.c
tests/demos/: brainstem_demo.c  demo_viz.c  rb_demo.c  rbs.c
thalamus/: CMakeLists.txt
thalamus/vision/: frame_pool.c  frame_pool.h  thalamus_vision.c  thalamus_vision.h
